RESOLVED FIXED98507
[GTK] Test /webkit2/WebKitWebView/populate-menu asserts in debug bots
https://bugs.webkit.org/show_bug.cgi?id=98507
Summary [GTK] Test /webkit2/WebKitWebView/populate-menu asserts in debug bots
Carlos Garcia Campos
Reported 2012-10-05 04:03:42 PDT
/webkit2/WebKitWebView/populate-menu: ASSERTION FAILED: iconRecord || m_retainedPageURLs.contains(pageURLOriginal) ../../Source/WebCore/loader/icon/IconDatabase.cpp(266) : virtual WebCore::Image* WebCore::IconDatabase::synchronousIconForPageURL(const WTF::String&, const WebCore::IntSize&)
Attachments
Patch (4.46 KB, patch)
2012-10-05 04:09 PDT, Carlos Garcia Campos
mrobinson: review+
Carlos Garcia Campos
Comment 1 2012-10-05 04:09:49 PDT
WebKit Review Bot
Comment 2 2012-10-05 04:11:49 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Martin Robinson
Comment 3 2012-10-05 08:18:22 PDT
Comment on attachment 167305 [details] Patch Okay. But before you land, do you mind having Mario look over this too?
Mario Sanchez Prada
Comment 4 2012-10-08 01:55:23 PDT
Comment on attachment 167305 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=167305&action=review The patch looks good to me too. A pity I didn't realize of this issue when writing the original patch, quite happy Carlos figured it out and fixed it, though. > Source/WebKit2/UIProcess/API/gtk/WebKitFaviconDatabase.cpp:151 > PendingIconRequestVector* icons = database->priv->pendingIconRequests.get(pageURL); Completely off-topic thing: you might consider renaming this 'icons' variable before landing to something more adequate, such as 'pendingIconRequests', or something like that. > Source/WebKit2/UIProcess/API/gtk/WebKitFaviconDatabase.cpp:156 > + RefPtr<cairo_surface_t> icon = getIconSurfaceSynchronously(database, pageURL, &error.outPtr()); I like this refactoring: taking this call out of the loop. Good catch.
Carlos Garcia Campos
Comment 5 2012-10-08 02:28:34 PDT
Note You need to log in before you can comment on or make changes to this bug.